Process file without saving it
